# fair-trade-coffe-dapp

./: .gitignore  Anchor.toml  README.md  package.json
app/: fair_trade_coffee.json  package-lock.json  package.json
app/keys/: genesisAccount-keypair.json  initAccount-keypair.json
app/scripts/: createKeyPair.ts
app/src/components/: index.ts
app/src/components/button/: index.tsx
app/src/components/footer/: index.tsx
app/src/components/header/: index.tsx
app/src/components/main/: index.tsx
app/src/components/registerTradeForm/: index.tsx
app/src/components/selectForm/: index.tsx
app/src/components/tradeCard/: index.tsx
app/src/config/: appConfig.js
app/src/context/: index.tsx
app/src/layout/: index.tsx
app/src/store/: notificationStore.ts
app/src/types/: index.ts
app/src/utils/: getKeyFromFile.ts  index.ts  notify.ts  sol.ts
app/styles/: globals.css
programs/fairTradeCoffee/: Cargo.toml
programs/fairTradeCoffee/src/: lib.rs
tests/: fairTradeCoffee.ts
